Fixes problem with overlap on modal showing the background.

--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -147,6 +147,7 @@ nav {
 
 // Modal Content
 .modal-content {
+    border-radius: 10px;
     position: relative;
     background-color: #fefefe;
     margin: auto;
